:sparkles: feat: adiciona tratamento de erro 409 para conflitos de integridade no banco de dados