@@ -4,6 +4,10 @@ import jakarta.persistence.*;
 import lombok.AllArgsConstructor;
 import lombok.Data;
 import lombok.NoArgsConstructor;
+import org.springframework.security.core.GrantedAuthority;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
+
+import java.util.Arrays;
 
 @Data
 @NoArgsConstructor
@@ -31,8 +35,14 @@ public class Usuario implements org.springframework.security.core.userdetails.Us
     // --- MÉTODOS DO CONTRATO USERDETAILS (SPRING SECURITY) ---
 
     @Override
-    public java.util.Collection<? extends org.springframework.security.core.GrantedAuthority> getAuthorities() {
-        return java.util.List.of(new org.springframework.security.core.authority.SimpleGrantedAuthority("ROLE_USER"));
+    public java.util.Collection<? extends GrantedAuthority> getAuthorities() {
+        if ("BARBEIRO".equals(perfil)) {
+            return Arrays.asList(new SimpleGrantedAuthority("ROLE_ADMIN"));
+        }
+        else if ("CLIENTE".equals(perfil)) {
+            return Arrays.asList(new SimpleGrantedAuthority("ROLE_USUARIO"));
+        }
+        return java.util.Collections.emptyList();
     }
 
     @Override
